changing success color and updates after compile scss

--- a/dev/rtl/bootstrap-card.html
+++ b/dev/rtl/bootstrap-card.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Bootstrap Components &rsaquo; Card &mdash; Stisla</title>
+  <title>Bootstrap Components &rsaquo Card &mdash Stisla</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="../assets/modules/bootstrap/css/bootstrap.min.css">
@@ -517,7 +517,7 @@
               </div>
             </div>
 
-            <h2 class="section-title">Card Button &amp; Input</h2>
+            <h2 class="section-title">Card Button &amp Input</h2>
             <p class="section-lead">
               Also, you can give a button or input on the card header.
             </p>
@@ -710,7 +710,7 @@
                       </div>
                     </div>
                     <div class="card-footer pt-">
-                      <button type="submit" onclick="$.cardProgress('#sample-login', {dismiss: true,onDismiss: function() {alert('Dismissed :)')}});return false;" class="btn btn-primary">Login</button>
+                      <button type="submit" onclick="$.cardProgress('#sample-login', {dismiss: true,onDismiss: function() {alert('Dismissed :)')}})return false" class="btn btn-primary">Login</button>
                       <a href="#" class="mr-2">حساب کاربری نداری؟</a>
                     </div>
                   </form>
@@ -770,7 +770,7 @@
       </div>
       <footer class="main-footer">
         <div class="footer-left">
-          Copyright &copy; 2018 <div class="bullet"></div> Design By <a href="https://nauval.in/">Muhamad Nauval Azhar</a>
+          Copyright &copy 2018 <div class="bullet"></div> Design By <a href="https://nauval.in/">Muhamad Nauval Azhar</a>
         </div>
         <div class="footer-right">
 
@@ -787,13 +787,13 @@
   <script src="../assets/modules/nicescroll/jquery.nicescroll.min.js"></script>
   <script src="../assets/modules/moment.min.js"></script>
   <script src="../assets/js/stisla.js"></script>
-  
+
   <!-- JS Libraies -->
   <script src="../assets/modules/chocolat/dist/js/jquery.chocolat.min.js"></script>
   <script src="../assets/modules/jquery-ui/jquery-ui.min.js"></script>
 
   <!-- Page Specific JS File -->
-  
+
   <!-- Template JS File -->
   <script src="../assets/js/scripts.js"></script>
   <script src="../assets/js/custom.js"></script>
