--- a/pages/bootstrap-card.html
+++ b/pages/bootstrap-card.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Bootstrap Components &rsaquo; Card &mdash; Stisla</title>
+  <title>Bootstrap Components &rsaquo Card &mdash; Stisla</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -554,7 +554,7 @@
               </div>
             </div>
 
-            <h2 class="section-title">Card Button &amp; Input</h2>
+            <h2 class="section-title">Card Button &amp Input</h2>
             <p class="section-lead">
               Also, you can give a button or input on the card header.
             </p>
@@ -747,7 +747,7 @@
                       </div>
                     </div>
                     <div class="card-footer pt-">
-                      <button type="submit" onclick="$.cardProgress('#sample-login', {dismiss: true,onDismiss: function() {alert('Dismissed :)')}});return false;" class="btn btn-primary">Login</button>
+                      <button type="submit" onclick="$.cardProgress('#sample-login', {dismiss: true,onDismiss: function() {alert('Dismissed :)')}})return false" class="btn btn-primary">Login</button>
                       <a href="#" class="ml-2">Create new Account?</a>
                     </div>
                   </form>
