--- a/sources/pages/bootstrap-card.html
+++ b/sources/pages/bootstrap-card.html
@@ -1,4 +1,4 @@
-{% set title = 'Bootstrap Components &rsaquo; Card' %}
+{% set title = 'Bootstrap Components &rsaquo Card' %}
 {% set page = 'bootstrap-card.html' %}
 {% extends 'layouts/master.html' %}
 
@@ -161,7 +161,7 @@
               </div>
             </div>
 
-            <h2 class="section-title">Card Button &amp; Input</h2>
+            <h2 class="section-title">Card Button &amp Input</h2>
             <p class="section-lead">
               Also, you can give a button or input on the card header.
             </p>
@@ -354,7 +354,7 @@
                       </div>
                     </div>
                     <div class="card-footer pt-">
-                      <button type="submit" onclick="$.cardProgress('#sample-login', {dismiss: true,onDismiss: function() {alert('Dismissed :)')}});return false;" class="btn btn-primary">Login</button>
+                      <button type="submit" onclick="$.cardProgress('#sample-login', {dismiss: true,onDismiss: function() {alert('Dismissed :)')}})return false" class="btn btn-primary">Login</button>
                       <a href="#" class="ml-2">Create new Account?</a>
                     </div>
                   </form>
